<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Twitter Client</string>
    <string name="action_settings">Settings</string>
    <string name="action_tweet">Compose Tweet</string>
    <string name="action_signout">Sign out</string>
    <string name="action_search">Search</string>
    <string name="action_profile">Profile</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="user_name_label">userName</string>
    <string name="user_handle_label">\@userHandle</string>
    <string name="tweet_body_label">This is tweet body</string>
    <string name="time_label">Time</string>
    <string name="user_image_label">User Profile Image</string>
    <string name="home_label">Home</string>
    <string name="title_activity_new_tweet">NewTweetActivity</string>
    <string name="back_home_label">Back to timeline</string>
    <string name="tweet_hint_label">What\'s happening</string>
    <string name="tweet_total_chars">140</string>
    <string name="new_tweet_label">Tweet</string>
    <string name="title_activity_tweet_details">TweetDetailsActivity</string>
    <string name="network_unavilable">Network not available</string>
    <string name="tweet_image_label">Tweet Image</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="compose_label">What\'s happening</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="tweets_label">TWEETS</string>
    <string name="followers_label">FOLLOWERS</string>
    <string name="following_label">FOLLOWING</string>
    <string name="edit_profile_label">Edit profile</string>
    <string name="favorited_label">Favorited</string>
     <string name="usersetting_label">User Setting</string>
     <string name="connect_label">Connect to Twitter</string>
    

</resources>