<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.AndroidBootCamp.BasicTwitter.activities.MainActivity" >

    <item
        android:id="@+id/action_new_tweet"
        android:icon="@drawable/ic_new_tweet"
        android:orderInCategory="6"
        android:title="@string/action_tweet"
        myapp:showAsAction="always"/>
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_action_profile"
        android:orderInCategory="8"
        android:title="@string/action_profile"
        myapp:showAsAction="always"/>
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="10"
        android:title="@string/action_search"
        myapp:showAsAction="always"/>
     <item
        android:id="@+id/action_setting"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        myapp:showAsAction="never"/>
    <item
        android:id="@+id/action_signout"
        android:orderInCategory="101"
        android:title="@string/action_signout"
        myapp:showAsAction="never"/>

</menu>